Shit we needed that package, also fixed text alignment on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -10,7 +10,6 @@
 
 .gradetable thead tr th,
 .gradetable tbody tr td {
-    vertical-align: top;
     padding-block: 4px;
     padding-inline: 12px;
 }
